--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -12,49 +12,50 @@
     "contact": "संपर्क"
   },
   "home": {
-    "welcome": {
-      "title": "ग्राम पंचायत में आपका स्वागत है",
-      "description1": "श्रीरामपुर महाराष्ट्र के ग्रामीण क्षेत्र में स्थित एक जीवंत गाँव है, जहाँ परंपरा प्रगति से मिलती है। हमारी ग्राम पंचायत अपने गाँव के सतत विकास और निवासियों के कल्याण के लिए प्रतिबद्ध है।",
-      "description2": "हमारे सरपंच और समर्पित पंचायत सदस्यों के दूरदर्शी नेतृत्व में, हम श्रीरामपुर को आधुनिक सुविधाओं के साथ एक आदर्श गाँव में बदलने के लिए अथक प्रयास कर रहे हैं, जबकि हमारी समृद्ध सांस्कृतिक विरासत को संरक्षित कर रहे हैं।"
+    "slide1": {
+      "title": "श्रीरामपुर में आपका स्वागत है",
+      "subtitle": "सतत विकास और समृद्धि के प्रति प्रतिबद्ध एक आदर्श गाँव"
     },
-    "features": {
-      "title": "हमारी विशेषताएं",
-      "subtitle": "जानें कि श्रीरामपुर को क्या विशेष बनाता है",
-      "cleanVillage": {
-        "title": "स्वच्छ गाँव",
-        "description": "स्वच्छता और साफ-सफाई के लिए पुरस्कार विजेता पहल"
-      },
-      "digitalServices": {
-        "title": "डिजिटल सेवाएं",
-        "description": "प्रमाणपत्र, आवेदन और सरकारी योजनाओं तक ऑनलाइन पहुंच"
-      },
-      "community": {
-        "title": "सामुदायिक समर्थन",
-        "description": "गाँव के विकास के लिए मजबूत सामुदायिक बंधन"
-      },
-      "workforce": {
-        "title": "कुशल कार्यबल",
-        "description": "ग्रामीणों के लिए नियमित कौशल विकास कार्यक्रम"
-      }
+    "slide2": {
+      "title": "स्वच्छ गाँव, सुंदर गाँव",
+      "subtitle": "हमारा गर्व, हमारी जिम्मेदारी"
     },
-    "stats": {
-      "population": "जनसंख्या",
-      "literacy": "साक्षरता दर",
-      "schemes": "गाँव योजनाएं",
-      "waterSupply": "जल आपूर्ति"
+    "slide3": {
+      "title": "विकास की यात्रा",
+      "subtitle": "प्रगति की ओर एक कदम"
     },
-    "services": {
-      "title": "हमारी सेवाएं",
-      "subtitle": "ग्राम पंचायत द्वारा प्रदान की जाने वाली व्यापक सेवाएं"
-    },
-    "events": {
-      "title": "आगामी कार्यक्रम",
-      "subtitle": "हमारे गाँव में होने वाली नवीनतम गतिविधियों से अपडेट रहें"
-    },
-    "cta": {
-      "title": "प्रश्न या सुझाव हैं?",
-      "subtitle": "हम आपकी सेवा के लिए यहाँ हैं। अपनी जिज्ञासाओं या प्रतिक्रिया के साथ हमसे संपर्क करें।"
-    }
+    "welcomeTitle": "Welcome to ",
+    "villageName": "ShreeRampur",
+    "gramPanchayat": " Gram Panchayat",
+    "welcomeParagraph1": "श्रीरामपुर महाराष्ट्र के ग्रामीण क्षेत्र में स्थित एक जीवंत गाँव है, जहाँ परंपरा प्रगति से मिलती है। हमारी ग्राम पंचायत अपने गाँव के सतत विकास और निवासियों के कल्याण के लिए प्रतिबद्ध है।",
+    "welcomeParagraph2": "हमारे सरपंच और समर्पित पंचायत सदस्यों के दूरदर्शी नेतृत्व में, हम श्रीरामपुर को आधुनिक सुविधाओं के साथ एक आदर्श गाँव में बदलने के लिए अथक प्रयास कर रहे हैं, जबकि हमारी समृद्ध सांस्कृतिक विरासत को संरक्षित कर रहे हैं।",
+    "learnMore": "हमारे बारे में और जानें",
+    "membersTitle": "आमची ग्रामपंचायत सदस्य",
+    "membersSubtitle": "गावाच्या विकासासाठी समर्पित नेतृत्व",
+    "emergencyTitle": "आपातकालीन सेवाएं",
+    "emergencySubtitle": "हमारे गाँव के निवासियों के लिए 24/7 आपातकालीन सहायता",
+    "ambulanceTitle": "एम्बुलेंस सेवा",
+    "ambulanceContact": "संपर्क: 108",
+    "ambulanceAlternate": "वैकल्पिक: +91 98765 43210",
+    "ambulanceDetails": "24/7 उन्नत जीवन समर्थन के साथ एम्बुलेंस सेवा",
+    "medicalTitle": "चिकित्सा आपातकाल",
+    "medicalContact1": "डॉ. पाटिल: +91 98765 12345",
+    "medicalContact2": "प्राथमिक स्वास्थ्य केंद्र: 02135-123456",
+    "medicalDetails": "आपातकालीन चिकित्सा परामर्श के लिए उपलब्ध",
+    "policeTitle": "पुलिस स्टेशन",
+    "policeContact1": "आपातकालीन: 100",
+    "policeContact2": "पुलिस स्टेशन: 02135-234567",
+    "policeDetails": "24/7 पुलिस सहायता और आपातकालीन प्रतिक्रिया",
+    "fireTitle": "फायर इमरजेंसी",
+    "fireContact1": "फायर ब्रिगेड: 101",
+    "fireContact2": "कंट्रोल रूम: 02135-345678",
+    "fireDetails": "त्वरित प्रतिक्रिया अग्नि आपातकालीन सेवाएं",
+    "eventsTitle": "आगामी कार्यक्रम",
+    "eventsSubtitle": "हमारे गाँव में होने वाली नवीनतम गतिविधियों से अपडेट रहें",
+    "viewAllEvents": "सभी कार्यक्रम देखें",
+    "ctaTitle": "प्रश्न या सुझाव हैं?",
+    "ctaSubtitle": "हम आपकी सेवा के लिए यहाँ हैं। अपनी जिज्ञासाओं या प्रतिक्रिया के साथ हमसे संपर्क करें।",
+    "contactUs": "संपर्क करें"
   },
   "about": {
     "history": {
@@ -104,11 +105,39 @@
         "position": "पद",
         "category": "श्रेणी"
       }
+    },
+    "achievements": {
+      "title": "गाँव की उपलब्धियाँ",
+      "subtitle": "सम्मान और उपलब्धियाँ जो हमें गर्वित करती हैं",
+      "items": {
+        "2023": {
+          "title": "राज्य स्तरीय स्वच्छ गाँव पुरस्कार",
+          "description": "उत्कृष्ट कचरा प्रबंधन और स्वच्छता प्रथाओं के लिए सम्मानित।"
+        },
+        "2022": {
+          "title": "100% डिजिटल साक्षरता",
+          "description": "14-60 वर्ष के सभी निवासियों के लिए डिजिटल साक्षरता प्राप्त की।"
+        },
+        "2021": {
+          "title": "जल संरक्षण मॉडल गाँव",
+          "description": "नवोन्मेषी जल संचयन और संरक्षण तकनीकों को लागू किया।"
+        },
+        "2020": {
+          "title": "खुले में शौच मुक्त स्थिति",
+          "description": "100% शौचालय कवरेज के साथ ओडीएफ स्थिति सफलतापूर्वक प्राप्त और बनाए रखी।"
+        },
+        "2018": {
+          "title": "सौर ऊर्जा अपनाना",
+          "description": "सार्वजनिक सुविधाओं और स्ट्रीट लाइटिंग के लिए सौर ऊर्जा अपनाने वाला जिले का पहला गाँव।"
+        }
+      }
     }
   },
   "services": {
     "title": "हमारी सेवाएं",
     "subtitle": "निवासियों के कल्याण के लिए व्यापक सेवाएं और योजनाएं",
+    "offeredTitle": "प्रदान की गई सेवाएं",
+    "offeredSubtitle": "ग्राम पंचायत सभी निवासियों को कुशल सेवाएं प्रदान करने के लिए समर्पित है",
     "certificates": {
       "title": "प्रमाणपत्र जारी करना",
       "description": "जन्म, मृत्यु, निवास, आय और अन्य आवश्यक प्रमाणपत्र कुशलतापूर्वक जारी किए जाते हैं"
@@ -120,28 +149,221 @@
     "schemes": {
       "title": "योजना पंजीकरण",
       "description": "विभिन्न सरकारी कल्याण योजनाओं और सब्सिडी के लिए आवेदन में सहायता"
+    },
+    "dispute": {
+      "title": "विवाद समाधान",
+      "description": "समुदाय के भीतर विवादों को सौहार्दपूर्ण ढंग से सुलझाने के लिए पारंपरिक ग्राम-स्तरीय विवाद समाधान तंत्र"
+    },
+    "library": {
+      "title": "पुस्तकालय सेवाएं",
+      "description": "हमारे गाँव के पुस्तकालय में पुस्तकों, समाचार पत्रों और शैक्षिक संसाधनों का संग्रह उपलब्ध है"
+    },
+    "housing": {
+      "title": "आवास सहायता",
+      "description": "गाँव के पात्र लाभार्थियों के लिए पीएमएवाई-जी जैसी सरकारी आवास योजनाओं के लिए मार्गदर्शन"
+    },
+    "health": {
+      "title": "स्वास्थ्य सेवाएं",
+      "description": "नियमित स्वास्थ्य शिविरों और जागरूकता कार्यक्रमों के लिए प्राथमिक स्वास्थ्य केंद्र के साथ समन्वय"
+    },
+    "tax": {
+      "title": "कर संग्रह",
+      "description": "गाँव के विकास के लिए संपत्ति कर, जल शुल्क और अन्य स्थानीय करों का संग्रह"
+    },
+    "process": {
+      "title": "सेवा प्राप्त करने की प्रक्रिया",
+      "subtitle": "ग्राम पंचायत सेवाओं तक पहुँचने की सरल प्रक्रिया",
+      "steps": {
+        "step1": {
+          "title": "आवेदन जमा करें",
+          "desc": "पंचायत कार्यालय जाएँ या आवश्यक दस्तावेजों के साथ अपना आवेदन जमा करने के लिए हमारे ऑनलाइन पोर्टल का उपयोग करें"
+        },
+        "step2": {
+          "title": "सत्यापन",
+          "desc": "हमारी टीम सेवा आवश्यकताओं के अनुसार आपके आवेदन और दस्तावेजों का सत्यापन करेगी"
+        },
+        "step3": {
+          "title": "प्रसंस्करण",
+          "desc": "आपका अनुरोध सेवा मानदंडों के अनुसार निर्धारित समय सीमा के भीतर संसाधित किया जाएगा"
+        },
+        "step4": {
+          "title": "सेवा वितरण",
+          "desc": "एक बार स्वीकृत होने के बाद, अपना प्रमाणपत्र/दस्तावेज़ प्राप्त करें या लागू होने पर सेवा प्राप्त करें"
+        }
+      }
+    },
+    "govSchemes": {
+      "title": "सरकारी योजनाएँ",
+      "subtitle": "पात्र निवासियों के लिए उपलब्ध विभिन्न कल्याणकारी योजनाओं की जानकारी",
+      "applyNow": "अभी आवेदन करें",
+      "eligibility": "पात्रता:",
+      "documents": "आवश्यक दस्तावेज़:",
+      "pmKisan": {
+        "title": "पीएम किसान सम्मान निधि",
+        "description": "किसान परिवारों को प्रति वर्ष ₹6,000 की प्रत्यक्ष आय सहायता",
+        "eligibility": "सभी छोटे और सीमांत किसान जिनके पास कृषि योग्य भूमि है",
+        "documents": "आधार कार्ड, भूमि अभिलेख, बैंक खाता विवरण"
+      },
+      "pmay": {
+        "title": "प्रधानमंत्री आवास योजना - ग्रामीण",
+        "description": "पक्के घर के निर्माण के लिए वित्तीय सहायता",
+        "eligibility": "बेघर परिवार और वे जिनके पास कच्चे/जर्जर घर हैं",
+        "documents": "आधार कार्ड, आय प्रमाण पत्र, भूमि दस्तावेज़"
+      },
+      "ayushman": {
+        "title": "आयुष्मान भारत",
+        "description": "प्रति परिवार प्रति वर्ष ₹5 लाख का स्वास्थ्य बीमा कवर",
+        "eligibility": "एसईसीसी डेटाबेस के माध्यम से पहचाने गए परिवार",
+        "documents": "आधार कार्ड, राशन कार्ड"
+      },
+      "mgnrega": {
+        "title": "मनरेगा",
+        "description": "वित्तीय वर्ष में 100 दिनों के वेतन रोजगार की गारंटी",
+        "eligibility": "अकुशल शारीरिक कार्य करने के इच्छुक ग्रामीण परिवारों के वयस्क सदस्य",
+        "documents": "जॉब कार्ड, आधार कार्ड, बैंक खाता विवरण"
+      }
+    },
+    "officeHours": {
+      "title": "पंचायत कार्यालय समय",
+      "regular": "सोमवार - शनिवार:",
+      "time": "सुबह 10:00 - शाम 5:00",
+      "lunch": "लंच ब्रेक:",
+      "lunchTime": "दोपहर 1:00 - 2:00",
+      "holidays": "रविवार और सार्वजनिक अवकाश:",
+      "closed": "बंद",
+      "note": {
+        "certificates": "* प्रमाणपत्र सेवाएँ केवल सुबह 10:00 से दोपहर 1:00 तक उपलब्ध हैं",
+        "sarpanch": "* सरपंच से मिलने का समय: बुधवार और शुक्रवार, दोपहर 3:00 - शाम 5:00"
+      }
     }
   },
   "events": {
     "title": "गाँव के कार्यक्रम",
     "subtitle": "श्रीरामपुर में होने वाली सभी गतिविधियों से अपडेट रहें",
+    "upcomingEventsTitle": "आगामी कार्यक्रम",
+    "upcomingEventsSubtitle": "हमारे सामुदायिक आयोजनों और गतिविधियों का हिस्सा बनें",
     "search": "कार्यक्रम खोजें...",
-    "noEvents": {
-      "title": "कोई कार्यक्रम नहीं मिला",
-      "description": "अपने खोज मानदंड को बदलें या नए कार्यक्रमों के लिए बाद में फिर से जाँचें"
-    }
+    "categories": {
+      "all": "सभी",
+      "health": "स्वास्थ्य",
+      "agriculture": "कृषि",
+      "environment": "पर्यावरण",
+      "social": "सामाजिक",
+      "culture": "संस्कृति"
+    },
+    "noEventsTitle": "कोई कार्यक्रम नहीं मिला",
+    "noEventsDescription": "अपने खोज मानदंड को बदलें या नए कार्यक्रमों के लिए बाद में फिर से जाँचें",
+    "annualEventsTitle": "वार्षिक गाँव कार्यक्रम",
+    "annualEventsSubtitle": "इन नियमित वार्षिक कार्यक्रमों के लिए अपने कैलेंडर चिह्नित करें",
+    "annualEvents": {
+      "january": "जनवरी",
+      "march": "मार्च",
+      "august": "अगस्त",
+      "october": "अक्टूबर",
+      "octNov": "अक्टूबर-नवंबर",
+      "republicDay": {
+        "title": "गणतंत्र दिवस समारोह",
+        "date": "26 जनवरी",
+        "location": "गाँव चौक"
+      },
+      "holi": {
+        "title": "होली उत्सव सभा",
+        "date": "मार्च (पंचांग अनुसार)",
+        "location": "सामुदायिक मैदान"
+      },
+      "independenceDay": {
+        "title": "स्वतंत्रता दिवस समारोह",
+        "date": "15 अगस्त",
+        "location": "विद्यालय मैदान"
+      },
+      "sportsTournament": {
+        "title": "गाँव खेल स्पर्धा",
+        "date": "2-10 अक्टूबर",
+        "location": "खेल मैदान"
+      },
+      "diwali": {
+        "title": "दीवाली सामुदायिक उत्सव",
+        "date": "पंचांग अनुसार",
+        "location": "गाँव केंद्र"
+      }
+    },
+    "dynamicEvents": {
+      "1": {
+        "title": "रक्तदान शिविर",
+        "description": "जिल्हा रुग्णालय के सहयोग से आयोजित वार्षिक रक्तदान शिविर में भाग लें।",
+        "date": "15 मई, 2025",
+        "time": "सुबह 9:00 - शाम 4:00",
+        "location": "ग्राम सामुदायिक हॉल"
+      },
+      "2": {
+        "title": "किसान प्रशिक्षण कार्यक्रम",
+        "description": "आधुनिक कृषि तकनीकों और किसानों के लिए सरकारी योजनाओं के बारे में जानें।",
+        "date": "2 जून, 2025",
+        "time": "सुबह 10:00 - दोपहर 1:00",
+        "location": "कृषि विस्तार केंद्र"
+      },
+      "3": {
+        "title": "गाँव स्वच्छता अभियान",
+        "description": "गाँव को स्वच्छ रखने और उचित कचरा प्रबंधन के लिए सामुदायिक पहल।",
+        "date": "10 जून, 2025",
+        "time": "सुबह 7:00 - 11:00",
+        "location": "गाँव चौक"
+      },
+      "4": {
+        "title": "महिला सशक्तिकरण कार्यशाला",
+        "description": "महिलाओं के लिए कौशल विकास और उद्यमिता के अवसरों पर केंद्रित कार्यशाला।",
+        "date": "18 जून, 2025",
+        "time": "सुबह 11:00 - दोपहर 2:00",
+        "location": "पंचायत मीटिंग हॉल"
+      },
+      "5": {
+        "title": "निःशुल्क स्वास्थ्य जांच शिविर",
+        "description": "नेत्र परीक्षण, रक्तचाप और मधुमेह जांच सहित व्यापक स्वास्थ्य जांच।",
+        "date": "5 जुलाई, 2025",
+        "time": "सुबह 9:00 - दोपहर 3:00",
+        "location": "प्राथमिक स्वास्थ्य केंद्र"
+      },
+      "6": {
+        "title": "बाल दिवस उत्सव",
+        "description": "बाल दिवस के अवसर पर बच्चों के लिए मजेदार गतिविधियाँ, खेल और सांस्कृतिक कार्यक्रम।",
+        "date": "14 नवम्बर, 2025",
+        "time": "सुबह 10:00 - दोपहर 2:00",
+        "location": "गाँव स्कूल मैदान"
+      }
+    },
+    "proposeTitle": "क्या आपके पास कार्यक्रम का विचार है?",
+    "proposeDescription": "हम सामुदायिक-प्रेरित कार्यक्रमों और पहलों का स्वागत करते हैं। यदि आपके पास हमारे गाँव के लिए लाभकारी कार्यक्रम का कोई विचार है, तो कृपया हमारे साथ साझा करें।",
+    "proposeButton": "कार्यक्रम प्रस्तावित करें"
   },
   "gallery": {
     "title": "हमारी गैलरी",
     "subtitle": "श्रीरामपुर के सार और भावना को कैप्चर करना",
-    "photoGallery": {
-      "title": "फोटो गैलरी",
-      "subtitle": "हमारे गाँव के जीवन और गतिविधियों की एक दृश्य यात्रा"
+    "photoGalleryTitle": "फोटो गैलरी",
+    "photoGallerySubtitle": "हमारे गाँव के जीवन और गतिविधियों की एक दृश्य यात्रा",
+    "videoGalleryTitle": "वीडियो गैलरी",
+    "videoGallerySubtitle": "गाँव के कार्यक्रमों और उपलब्धियों को प्रदर्शित करने वाले वीडियो देखें",
+    "images": {
+      "1": { "alt": "गाँव का दृश्य", "category": "गाँव" },
+      "2": { "alt": "कृषि कार्य", "category": "कृषि" },
+      "3": { "alt": "स्थानीय उत्सव", "category": "संस्कृति" },
+      "4": { "alt": "सामुदायिक बैठक", "category": "कार्यक्रम" },
+      "5": { "alt": "स्कूल के बच्चे", "category": "शिक्षा" },
+      "6": { "alt": "सांस्कृतिक कार्यक्रम", "category": "संस्कृति" },
+      "7": { "alt": "गाँव का मंदिर", "category": "गाँव" },
+      "8": { "alt": "गेहूं के खेत", "category": "कृषि" },
+      "9": { "alt": "गाँव का तालाब", "category": "गाँव" },
+      "10": { "alt": "स्वास्थ्य शिविर", "category": "कार्यक्रम" },
+      "11": { "alt": "स्कूल गतिविधियाँ", "category": "शिक्षा" },
+      "12": { "alt": "पारंपरिक नृत्य", "category": "संस्कृति" }
     },
-    "videoGallery": {
-      "title": "वीडियो गैलरी",
-      "subtitle": "गाँव के कार्यक्रमों और उपलब्धियों को प्रदर्शित करने वाले वीडियो देखें"
-    }
+    "videos": {
+      "1": { "title": "गाँव विकास परियोजना" },
+      "2": { "title": "गणतंत्र दिवस समारोह 2025" },
+      "3": { "title": "ग्राम सभा बैठक मुख्य बिंदु" }
+    },
+    "ctaTitle": "अपने गाँव के पल साझा करें",
+    "ctaDescription": "क्या आपके पास श्रीरामपुर गाँव के कार्यक्रमों या सुंदर स्थानों की तस्वीरें या वीडियो हैं? उन्हें हमारे साथ साझा करें ताकि वे हमारी गैलरी में प्रदर्शित हो सकें।",
+    "submitMedia": "मीडिया सबमिट करें"
   },
   "contact": {
     "title": "संपर्क करें",
@@ -157,7 +379,45 @@
       "phone": "फोन नंबर",
       "subject": "विषय",
       "message": "आपका संदेश",
-      "submit": "संदेश भेजें"
-    }
+      "submit": "संदेश भेजें",
+      "success": "फॉर्म सफलतापूर्वक सबमिट हो गया!"
+    },
+    "address": {
+      "title": "हमारा पता",
+      "line1": "ग्राम पंचायत कार्यालय, श्रीरामपुर",
+      "line2": "जिला: पुणे, महाराष्ट्र - 412108"
+    },
+    "phone": {
+      "title": "फोन नंबर",
+      "office": "कार्यालय: +91 2345 678901",
+      "sarpanch": "सरपंच: +91 98765 43210"
+    },
+    "email": {
+      "title": "ईमेल पता",
+      "primary": "grampanchayat.shreerampur@gov.in",
+      "sarpanch": "sarpanch.shreerampur@gov.in"
+    },
+    "hours": {
+      "title": "कार्यालय समय",
+      "weekdays": "सोमवार से शनिवार: सुबह 10:00 - शाम 5:00",
+      "holidays": "रविवार और सार्वजनिक अवकाश: बंद"
+    },
+    "feedback": {
+      "title": "आपकी प्रतिक्रिया महत्वपूर्ण है",
+      "description": "हमारी सेवाओं में सुधार के लिए हम आपके सुझावों और प्रतिक्रिया का स्वागत करते हैं। कृपया हमें बेहतर सेवा देने में मदद करने के लिए अपने विचार साझा करें।",
+      "button": "प्रतिक्रिया दें"
+    },
+    "map": {
+      "title": "हमें खोजें",
+      "subtitle": "श्रीरामपुर गाँव में हमारे कार्यालय पर आएं",
+      "directionsTitle": "हम तक कैसे पहुँचें",
+      "byBus": "बस द्वारा",
+      "byBusDesc": "श्रीरामपुर बस स्टॉप तक राज्य परिवहन बस लें। पंचायत कार्यालय बस स्टॉप से 500 मीटर की दूरी पर है।",
+      "byCar": "कार द्वारा",
+      "byCarDesc": "पुणे-सोलापुर हाईवे से श्रीरामपुर जंक्शन पर मुड़ें। गाँव के केंद्र तक पहुँचने के लिए साइनबोर्ड का अनुसरण करें।",
+      "byTrain": "ट्रेन द्वारा",
+      "byTrainDesc": "निकटतम रेलवे स्टेशन हडपसर (15 किमी) है। श्रीरामपुर पहुँचने के लिए ऑटो-रिक्शा या बस लें।"
+    },
+    "formSuccess": "फॉर्म सफलतापूर्वक सबमिट हो गया!"
   }
 }
