--- a/src/i18n/locales/mr.json
+++ b/src/i18n/locales/mr.json
@@ -30,6 +30,7 @@
     "welcomeParagraph1": "श्रीरामपूर हे महाराष्ट्राच्या ग्रामीण भागात वसलेले एक जिवंत गाव आहे, जिथे परंपरा प्रगतीशी मिळते. आमची ग्रामपंचायत गावाच्या शाश्वत विकासासाठी आणि रहिवाशांच्या कल्याणासाठी वचनबद्ध आहे.",
     "welcomeParagraph2": "आमच्या सरपंच आणि समर्पित पंचायत सदस्यांच्या दूरदर्शी नेतृत्वाखाली, आम्ही श्रीरामपूरला आधुनिक सुविधांसह एक आदर्श गाव बनवण्यासाठी अथक प्रयत्न करत आहोत, तसेच आमचा समृद्ध सांस्कृतिक वारसा जपत आहोत.",
     "learnMore": "आमच्याबद्दल अधिक जाणून घ्या",
+    "readMore": "अधिक वाचा",
     "membersTitle": "आमची ग्रामपंचायत सदस्य",
     "membersSubtitle": "गावाच्या विकासासाठी समर्पित नेतृत्व",
     "emergencyTitle": "आपत्कालीन सेवा",
