important notice is been added

--- a/src/i18n/locales/en.json
+++ b/src/i18n/locales/en.json
@@ -128,7 +128,8 @@
     "viewAllEvents": "View All Events",
     "ctaTitle": "Have Questions or Suggestions?",
     "ctaSubtitle": "We're here to serve you. Reach out to us with your queries or feedback.",
-    "contactUs": "Contact Us"
+    "contactUs": "Contact Us",
+    "importantNotice": "Important Notice: Please attend the Gram Sabha meeting on 25th June at 5:00 PM in the Village Hall. Your participation is valuable for village development!"
   },
   "services": {
     "title": "Our Services",
