--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -59,7 +59,8 @@
     "ctaTitle": "प्रश्न या सुझाव हैं?",
     "ctaSubtitle": "हम आपकी सेवा के लिए यहाँ हैं। अपनी जिज्ञासाओं या प्रतिक्रिया के साथ हमसे संपर्क करें।",
     "contactUs": "संपर्क करें",
-    "readMore": "और पढ़ें"
+    "readMore": "और पढ़ें",
+    "importantNotice": "महत्वपूर्ण सूचना: कृपया 25 जून को शाम 5:00 बजे ग्राम सभा बैठक में गाँव हॉल में उपस्थित रहें। आपके सहभाग से गाँव का विकास संभव है!"
   },
   "about": {
     "history": {
