--- a/src/i18n/locales/mr.json
+++ b/src/i18n/locales/mr.json
@@ -56,7 +56,8 @@
     "viewAllEvents": "सर्व कार्यक्रम पहा",
     "ctaTitle": "प्रश्न किंवा सूचना आहेत?",
     "ctaSubtitle": "आम्ही तुमची सेवा करण्यासाठी येथे आहोत. तुमच्या प्रश्नांसह किंवा अभिप्रायासह आमच्याशी संपर्क साधा.",
-    "contactUs": "संपर्क करा"
+    "contactUs": "संपर्क करा",
+    "importantNotice": "महत्वाची सूचना: कृपया २५ जून रोजी संध्याकाळी ५:०० वाजता ग्रामसभा बैठकीस गाव सभागृहात उपस्थित राहा. आपल्या सहभागामुळे गावाचा विकास साधता येईल!"
   },
   "about": {
     "history": {
@@ -419,6 +420,7 @@
       "byTrain": "रेल्वेने",
       "byTrainDesc": "जवळचे रेल्वे स्थानक हडपसर (१५ कि.मी.) आहे. श्रीरामपूरपर्यंत रिक्षा किंवा बस घ्या."
     },
-    "formSuccess": "फॉर्म यशस्वीरित्या सबमिट झाला!"
+    "formSuccess": "फॉर्म यशस्वीरित्या सबमिट झाला!",
+    "importantNotice": "महत्वाची सूचना: कृपया २५ जून रोजी संध्याकाळी ५:०० वाजता ग्रामसभा बैठकीस गाव सभागृहात उपस्थित राहा. आपल्या सहभागामुळे गावाचा विकास साधता येईल!"
   }
 }
