--- a/src/i18n/locales/mr.json
+++ b/src/i18n/locales/mr.json
@@ -1,6 +1,6 @@
 {
   "welcome": {
-    "title": "श्रीरामपूरमध्ये आपले स्वागत आहे",
+    "title": "जनोरीमध्ये आपले स्वागत आहे",
     "subtitle": "शाश्वत विकास आणि समृद्धीसाठी वचनबद्ध एक आदर्श गाव"
   },
   "nav": {
@@ -13,7 +13,7 @@
   },
   "home": {
     "slide1": {
-      "title": "श्रीरामपूरमध्ये आपले स्वागत आहे",
+      "title": "जनोरीमध्ये आपले स्वागत आहे",
       "subtitle": "शाश्वत विकास आणि समृद्धीसाठी वचनबद्ध एक आदर्श गाव"
     },
     "slide2": {
@@ -25,10 +25,10 @@
       "subtitle": "प्रगतीकडे एक पाऊल"
     },
     "welcomeTitle": "Welcome to ",
-    "villageName": "ShreeRampur",
+    "villageName": "Janori",
     "gramPanchayat": " Gram Panchayat",
-    "welcomeParagraph1": "श्रीरामपूर हे महाराष्ट्राच्या ग्रामीण भागात वसलेले एक जिवंत गाव आहे, जिथे परंपरा प्रगतीशी मिळते. आमची ग्रामपंचायत गावाच्या शाश्वत विकासासाठी आणि रहिवाशांच्या कल्याणासाठी वचनबद्ध आहे.",
-    "welcomeParagraph2": "आमच्या सरपंच आणि समर्पित पंचायत सदस्यांच्या दूरदर्शी नेतृत्वाखाली, आम्ही श्रीरामपूरला आधुनिक सुविधांसह एक आदर्श गाव बनवण्यासाठी अथक प्रयत्न करत आहोत, तसेच आमचा समृद्ध सांस्कृतिक वारसा जपत आहोत.",
+    "welcomeParagraph1": "जनोरी हे महाराष्ट्राच्या ग्रामीण भागात वसलेले एक जिवंत गाव आहे, जिथे परंपरा प्रगतीशी मिळते. आमची ग्रामपंचायत गावाच्या शाश्वत विकासासाठी आणि रहिवाशांच्या कल्याणासाठी वचनबद्ध आहे.",
+    "welcomeParagraph2": "आमच्या सरपंच आणि समर्पित पंचायत सदस्यांच्या दूरदर्शी नेतृत्वाखाली, आम्ही जनोरीला आधुनिक सुविधांसह एक आदर्श गाव बनवण्यासाठी अथक प्रयत्न करत आहोत, तसेच आमचा समृद्ध सांस्कृतिक वारसा जपत आहोत.",
     "learnMore": "आमच्याबद्दल अधिक जाणून घ्या",
     "readMore": "अधिक वाचा",
     "membersTitle": "आमची ग्रामपंचायत सदस्य",
@@ -62,8 +62,8 @@
   "about": {
     "history": {
       "title": "आमच्या गावाचा इतिहास",
-      "p1": "श्रीरामपूरचा समृद्ध इतिहास १८ व्या शतकापासून आहे. भगवान रामाच्या नावावरून नामकरण केलेले, हे गाव स्वातंत्र्य सैनिकांनी स्थापन केले होते ज्यांनी भारताच्या स्वातंत्र्य लढ्यादरम्यान या शांत ठिकाणी आश्रय घेतला होता.",
-      "p2": "वर्षानुवर्षे, श्रीरामपूर एका लहान कृषी वसाहतीपासून एका प्रगतिशील ग्रामीण समुदायात रूपांतरित झाला आहे, त्याचबरोबर आपला सांस्कृतिक वारसा आणि परंपरा जपत आहे.",
+      "p1": "जानोरी – विदर्भातील एक पवित्र व ऐतिहासिक धर्मस्थळ जानोरी हे गाव महाराष्ट्राच्या बुलढाणा जिल्ह्यात, शेगावपासून सुमारे ८ ते १० किलोमीटर अंतरावर वसलेले आहे. हे गाव आपल्या पुरातन मंदिरांच्या वास्तूशैली, धार्मिक परंपरा, आणि अध्यात्मिक वातावरणामुळे विदर्भात खूप प्रसिद्ध आहे.",
+      "p2": "भगवान नरसिंह मंदिर हे गावातील सर्वात प्रमुख व श्रद्धास्थानी मानले जाते. मंदिराची शिखरे, गर्भगृह आणि मंडप यामध्ये अप्रतिम दगडी शिल्पकला पाहायला मिळते. मंदिर परिसरात भक्तांसाठी ध्यान व प्रवचनाचे स्थळ उपलब्ध आहे. नरसिंह जयंती हा उत्सव येथे अत्यंत भक्तिभावाने साजरा केला जातो. या दिवशी हजारो भाविक दर्शनासाठी येतात. महादेव मंदिर हे गावाच्या मध्यवर्ती भागात वसलेले असून शिवभक्तांचे श्रद्धास्थान आहे. महाशिवरात्रीला येथे रात्रभर महापूजा व जागरणाचे आयोजन होते. स्थानिक भक्त आणि भाविक यासाठी विशेषतः या दिवशी येथे मोठ्या संख्येने उपस्थित राहतात. महासिद्ध भगवान मंदिर तांत्रिक साधना व गुप्त पूजांसाठी प्रसिद्ध आहे. आरोग्यसंपन्नता आणि मनोकामना पूर्तीच्या इच्छेने येथे भाविक येतात. मंदिराचा इतिहास गूढ साधनांच्या परंपरेशी जोडलेला आहे. श्रीराम, लक्ष्मण, सीता व हनुमान मंदिरे या मंदिरांमध्ये रामभक्तीचा प्रभाव दिसून येतो. रामनवमी व हनुमान जयंती हे सण येथे मोठ्या उत्साहात साजरे केले जातात. ग्रामस्थ व भाविक उत्सवप्रसंगी मोठ्या संख्येने सहभागी होतात",
       "p3": "आज, आमचे गाव कृषी समृद्धी, सांस्कृतिक समृद्धी आणि सामुदायिक सौहार्दासाठी ओळखले जाते, जे त्याला जिल्ह्यातील एक आदर्श गाव बनवते."
     },
     "demographics": {
@@ -241,7 +241,7 @@
   },
   "events": {
     "title": "गावातील कार्यक्रम",
-    "subtitle": "श्रीरामपूरमधील सर्व घडामोडींबद्दल अद्ययावत रहा",
+    "subtitle": "जनोरीमधील सर्व घडामोडींबद्दल अद्ययावत रहा",
     "upcomingEventsTitle": "येणारे कार्यक्रम",
     "upcomingEventsSubtitle": "आमच्या समुदायाच्या कार्यक्रमांचा आणि उपक्रमांचा भाग व्हा",
     "search": "कार्यक्रम शोधा...",
@@ -339,7 +339,7 @@
   },
   "gallery": {
     "title": "आमची गॅलरी",
-    "subtitle": "श्रीरामपूरचे सार आणि भावना टिपणे",
+    "subtitle": "जनोरीचे सार आणि भावना टिपणे",
     "photoGalleryTitle": "छायाचित्र गॅलरी",
     "photoGallerySubtitle": "आमच्या गावातील जीवन आणि उपक्रमांची दृश्य सफर",
     "videoGalleryTitle": "व्हिडिओ गॅलरी",
@@ -364,12 +364,12 @@
       "3": { "title": "ग्रामसभा बैठक ठळक मुद्दे" }
     },
     "ctaTitle": "तुमचे गाव क्षण शेअर करा",
-    "ctaDescription": "तुमच्याकडे श्रीरामपूर गावातील कार्यक्रम किंवा सुंदर ठिकाणांचे फोटो किंवा व्हिडिओ आहेत? आमच्या गॅलरीमध्ये प्रदर्शित करण्यासाठी ते आमच्यासोबत शेअर करा",
+    "ctaDescription": "तुमच्याकडे जनोरी गावातील कार्यक्रम किंवा सुंदर ठिकाणांचे फोटो किंवा व्हिडिओ आहेत? आमच्या गॅलरीमध्ये प्रदर्शित करण्यासाठी ते आमच्यासोबत शेअर करा",
     "submitMedia": "माध्यमे सबमिट करा"
   },
   "contact": {
     "title": "संपर्क",
-    "subtitle": "श्रीरामपूर ग्रामपंचायतीशी संपर्क साधा",
+    "subtitle": "जनोरी ग्रामपंचायतीशी संपर्क साधा",
     "getInTouch": {
       "title": "संपर्कात रहा",
       "description": "आम्ही तुमच्या कोणत्याही चौकशी किंवा समस्यांमध्ये मदत करण्यासाठी येथे आहोत. खालीलपैकी कोणत्याही माध्यमातून आमच्याशी संपर्क साधा:"
@@ -386,7 +386,7 @@
     },
     "address": {
       "title": "आमचा पत्ता",
-      "line1": "ग्रामपंचायत कार्यालय, श्रीरामपूर",
+      "line1": "ग्रामपंचायत कार्यालय, जनोरी",
       "line2": "जिल्हा: पुणे, महाराष्ट्र - ४१२१०८"
     },
     "phone": {
@@ -396,8 +396,8 @@
     },
     "email": {
       "title": "ईमेल पत्ते",
-      "primary": "grampanchayat.shreerampur@gov.in",
-      "sarpanch": "sarpanch.shreerampur@gov.in"
+      "primary": "grampanchayat.janori@gov.in",
+      "sarpanch": "sarpanch.janori@gov.in"
     },
     "hours": {
       "title": "कार्यालयीन वेळ",
@@ -411,14 +411,14 @@
     },
     "map": {
       "title": "आम्हाला शोधा",
-      "subtitle": "श्रीरामपूर गावातील आमच्या कार्यालयाला भेट द्या",
+      "subtitle": "जनोरी गावातील आमच्या कार्यालयाला भेट द्या",
       "directionsTitle": "आम्हाला कसे गाठाल",
       "byBus": "बसने",
-      "byBusDesc": "श्रीरामपूर बस स्थानकापर्यंत राज्य परिवहन बस घ्या. पंचायत कार्यालय बस स्थानकापासून ५०० मीटर अंतरावर आहे.",
+      "byBusDesc": "जनोरी बस स्थानकापर्यंत राज्य परिवहन बस घ्या. पंचायत कार्यालय बस स्थानकापासून ५०० मीटर अंतरावर आहे.",
       "byCar": "कारने",
-      "byCarDesc": "पुणे-सोलापूर महामार्गावरून श्रीरामपूर जंक्शनवर वळा. गाव केंद्रापर्यंत मार्गदर्शक फलकांचे अनुसरण करा.",
+      "byCarDesc": "पुणे-सोलापूर महामार्गावरून जनोरी जंक्शनवर वळा. गाव केंद्रापर्यंत मार्गदर्शक फलकांचे अनुसरण करा.",
       "byTrain": "रेल्वेने",
-      "byTrainDesc": "जवळचे रेल्वे स्थानक हडपसर (१५ कि.मी.) आहे. श्रीरामपूरपर्यंत रिक्षा किंवा बस घ्या."
+      "byTrainDesc": "जवळचे रेल्वे स्थानक हडपसर (१५ कि.मी.) आहे. जनोरीपर्यंत रिक्षा किंवा बस घ्या."
     },
     "formSuccess": "फॉर्म यशस्वीरित्या सबमिट झाला!",
     "importantNotice": "महत्वाची सूचना: कृपया २५ जून रोजी संध्याकाळी ५:०० वाजता ग्रामसभा बैठकीस गाव सभागृहात उपस्थित राहा. आपल्या सहभागामुळे गावाचा विकास साधता येईल!"
