--- a/src/i18n/locales/hi.json
+++ b/src/i18n/locales/hi.json
@@ -1,6 +1,6 @@
 {
   "welcome": {
-    "title": "श्रीरामपुर में आपका स्वागत है",
+    "title": "जनोरी में आपका स्वागत है",
     "subtitle": "सतत विकास और समृद्धि के प्रति प्रतिबद्ध एक आदर्श गाँव"
   },
   "nav": {
@@ -13,7 +13,7 @@
   },
   "home": {
     "slide1": {
-      "title": "श्रीरामपुर में आपका स्वागत है",
+      "title": "जनोरी में आपका स्वागत है",
       "subtitle": "सतत विकास और समृद्धि के प्रति प्रतिबद्ध एक आदर्श गाँव",
       "image": "https://media.istockphoto.com/id/503160722/photo/farmer-spreads-fertilizers-in-the-field-wheat.jpg?s=612x612&w=0&k=20&c=H616JmwTXkV8LVsiriMyqx2M9W_LUHbMwKiHEsehz-E="
     },
@@ -28,10 +28,10 @@
       "image": "https://media.istockphoto.com/id/1060740880/photo/aerial-view-of-poor-indian-town-varsana-barsana-high-resolution-panorama-for-large-format.jpg?s=612x612&w=0&k=20&c=eFZ2CF0oUgcF23IVcsDCw9QGr6q2a6d22_4nTSJKn4c="
     },
     "welcomeTitle": "Welcome to ",
-    "villageName": "ShreeRampur",
+    "villageName": "Janori",
     "gramPanchayat": " Gram Panchayat",
-    "welcomeParagraph1": "श्रीरामपुर महाराष्ट्र के ग्रामीण क्षेत्र में स्थित एक जीवंत गाँव है, जहाँ परंपरा प्रगति से मिलती है। हमारी ग्राम पंचायत अपने गाँव के सतत विकास और निवासियों के कल्याण के लिए प्रतिबद्ध है।",
-    "welcomeParagraph2": "हमारे सरपंच और समर्पित पंचायत सदस्यों के दूरदर्शी नेतृत्व में, हम श्रीरामपुर को आधुनिक सुविधाओं के साथ एक आदर्श गाँव में बदलने के लिए अथक प्रयास कर रहे हैं, जबकि हमारी समृद्ध सांस्कृतिक विरासत को संरक्षित कर रहे हैं।",
+    "welcomeParagraph1": "जनोरी महाराष्ट्र के ग्रामीण क्षेत्र में स्थित एक जीवंत गाँव है, जहाँ परंपरा प्रगति से मिलती है। हमारी ग्राम पंचायत अपने गाँव के सतत विकास और निवासियों के कल्याण के लिए प्रतिबद्ध है।",
+    "welcomeParagraph2": "हमारे सरपंच और समर्पित पंचायत सदस्यों के दूरदर्शी नेतृत्व में, हम जनोरी को आधुनिक सुविधाओं के साथ एक आदर्श गाँव में बदलने के लिए अथक प्रयास कर रहे हैं, जबकि हमारी समृद्ध सांस्कृतिक विरासत को संरक्षित कर रहे हैं।",
     "learnMore": "हमारे बारे में और जानें",
     "membersTitle": "आमची ग्रामपंचायत सदस्य",
     "membersSubtitle": "गावाच्या विकासासाठी समर्पित नेतृत्व",
@@ -65,8 +65,8 @@
   "about": {
     "history": {
       "title": "हमारे गाँव का इतिहास",
-      "p1": "श्रीरामपुर का एक समृद्ध इतिहास है जो 18वीं सदी से चला आ रहा है। भगवान राम के नाम पर नामित, यह गाँव स्वतंत्रता सेनानियों द्वारा स्थापित किया गया था जिन्होंने भारत के स्वतंत्रता संग्राम के दौरान इस शांत स्थान में शरण ली थी।",
-      "p2": "वर्षों से, श्रीरामपुर एक छोटी कृषि बस्ती से एक प्रगतिशील ग्रामीण समुदाय में बदल गया है, जबकि अपनी सांस्कृतिक विरासत और परंपराओं को संरक्षित किया है।",
+      "p1": "जानोरी - विदर्भ में एक पवित्र और ऐतिहासिक धार्मिक स्थल, शेगांव से लगभग 3 से 5 किलोमीटर दूर महाराष्ट्र के बडहाना जिले में स्थित है। यह गाँव हमारे प्राचीन मंदिरों, धार्मिक परंपराओं और आध्यात्मिक वातावरण की वास्तुकला के कारण विदर्भ में बहुत प्रसिद्ध है।",
+      "p2": "भगवान नरसिम्हा मंदिर को गाँव का सबसे प्रमुख माना जाता है। मंदिर की मूर्तिकला मंदिर, अभयारण्य और मंडप की चोटियों में देखी जाती है। मंदिर क्षेत्र में, भक्तों के लिए ध्यान और प्रवचन उपलब्ध है। नरसिम्हा जयती को यहां बहुत भक्ति के साथ मनाया जाता है। इस दिन हजारों भक्त लोग आते हैं। महादेव मंदिर गाँव के मध्य भाग में स्थित है और शिव भक्तों को श्रद्धांजलि है। महाशिव्रात्रि का आयोजन रात भर में किया गया था। स्थानीय भक्त और भक्त इन दिनों की बड़ी संख्या में भाग लेते हैं, खासकर इस दिन के लिए। महादिदा भगवान मंदिर तकनीकी ध्यान और गुप्त पूजा के लिए प्रसिद्ध है। भक्त अपने स्वास्थ्य और इच्छा को पूरा करने की इच्छा के साथ यहां आते हैं। मंदिर का इतिहास रहस्यमय उपकरणों की परंपरा से जुड़ा हुआ है। राम भक्ति के मंदिरों में श्रीराम, लक्ष्मण, सीता और हनुमान मंदिरों को देखा जाता है। रामनवामी और हनुमान जयती को यहां बहुत उत्साह के साथ मनाया जाता है। बड़ी संख्या में ग्रामीण और भक्त त्योहार में भाग लेते हैं ",
       "p3": "आज, हमारा गाँव कृषि समृद्धि, सांस्कृतिक समृद्धि और सामुदायिक सद्भाव के लिए जाना जाता है, जो इसे जिले का एक आदर्श गाँव बनाता है।"
     },
     "demographics": {
@@ -244,7 +244,7 @@
   },
   "events": {
     "title": "गाँव के कार्यक्रम",
-    "subtitle": "श्रीरामपुर में होने वाली सभी गतिविधियों से अपडेट रहें",
+    "subtitle": "जनोरी में होने वाली सभी गतिविधियों से अपडेट रहें",
     "upcomingEventsTitle": "आगामी कार्यक्रम",
     "upcomingEventsSubtitle": "हमारे सामुदायिक आयोजनों और गतिविधियों का हिस्सा बनें",
     "search": "कार्यक्रम खोजें...",
@@ -342,7 +342,7 @@
   },
   "gallery": {
     "title": "हमारी गैलरी",
-    "subtitle": "श्रीरामपुर के सार और भावना को कैप्चर करना",
+    "subtitle": "जनोरी के सार और भावना को कैप्चर करना",
     "photoGalleryTitle": "फोटो गैलरी",
     "photoGallerySubtitle": "हमारे गाँव के जीवन और गतिविधियों की एक दृश्य यात्रा",
     "videoGalleryTitle": "वीडियो गैलरी",
@@ -367,12 +367,12 @@
       "3": { "title": "ग्राम सभा बैठक मुख्य बिंदु" }
     },
     "ctaTitle": "अपने गाँव के पल साझा करें",
-    "ctaDescription": "क्या आपके पास श्रीरामपुर गाँव के कार्यक्रमों या सुंदर स्थानों की तस्वीरें या वीडियो हैं? उन्हें हमारे साथ साझा करें ताकि वे हमारी गैलरी में प्रदर्शित हो सकें।",
+    "ctaDescription": "क्या आपके पास जनोरी गाँव के कार्यक्रमों या सुंदर स्थानों की तस्वीरें या वीडियो हैं? उन्हें हमारे साथ साझा करें ताकि वे हमारी गैलरी में प्रदर्शित हो सकें।",
     "submitMedia": "मीडिया सबमिट करें"
   },
   "contact": {
     "title": "संपर्क करें",
-    "subtitle": "श्रीरामपुर ग्राम पंचायत से संपर्क करें",
+    "subtitle": "जनोरी ग्राम पंचायत से संपर्क करें",
     "getInTouch": {
       "title": "संपर्क में रहें",
       "description": "हम आपकी किसी भी पूछताछ या चिंताओं में सहायता के लिए यहाँ हैं। निम्नलिखित किसी भी माध्यम से हमसे संपर्क करें:"
@@ -389,7 +389,7 @@
     },
     "address": {
       "title": "हमारा पता",
-      "line1": "ग्राम पंचायत कार्यालय, श्रीरामपुर",
+      "line1": "ग्राम पंचायत कार्यालय, जनोरी",
       "line2": "जिला: पुणे, महाराष्ट्र - 412108"
     },
     "phone": {
@@ -399,8 +399,8 @@
     },
     "email": {
       "title": "ईमेल पता",
-      "primary": "grampanchayat.shreerampur@gov.in",
-      "sarpanch": "sarpanch.shreerampur@gov.in"
+      "primary": "grampanchayat.janori@gov.in",
+      "sarpanch": "sarpanch.janori@gov.in"
     },
     "hours": {
       "title": "कार्यालय समय",
@@ -414,14 +414,14 @@
     },
     "map": {
       "title": "हमें खोजें",
-      "subtitle": "श्रीरामपुर गाँव में हमारे कार्यालय पर आएं",
+      "subtitle": "जनोरी गाँव में हमारे कार्यालय पर आएं",
       "directionsTitle": "हम तक कैसे पहुँचें",
       "byBus": "बस द्वारा",
-      "byBusDesc": "श्रीरामपुर बस स्टॉप तक राज्य परिवहन बस लें। पंचायत कार्यालय बस स्टॉप से 500 मीटर की दूरी पर है।",
+      "byBusDesc": "जनोरी बस स्टॉप तक राज्य परिवहन बस लें। पंचायत कार्यालय बस स्टॉप से 500 मीटर की दूरी पर है।",
       "byCar": "कार द्वारा",
-      "byCarDesc": "पुणे-सोलापुर हाईवे से श्रीरामपुर जंक्शन पर मुड़ें। गाँव के केंद्र तक पहुँचने के लिए साइनबोर्ड का अनुसरण करें।",
+      "byCarDesc": "पुणे-सोलापुर हाईवे से जनोरी जंक्शन पर मुड़ें। गाँव के केंद्र तक पहुँचने के लिए साइनबोर्ड का अनुसरण करें।",
       "byTrain": "ट्रेन द्वारा",
-      "byTrainDesc": "निकटतम रेलवे स्टेशन हडपसर (15 किमी) है। श्रीरामपुर पहुँचने के लिए ऑटो-रिक्शा या बस लें।"
+      "byTrainDesc": "निकटतम रेलवे स्टेशन हडपसर (15 किमी) है। जनोरी पहुँचने के लिए ऑटो-रिक्शा या बस लें।"
     },
     "formSuccess": "फॉर्म सफलतापूर्वक सबमिट हो गया!"
   }
